Bug 289326 - URL in about tab points to a page that has been removed.
Summary: URL in about tab points to a page that has been removed.
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.7
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-18 23:21 UTC by dbjh
Modified: 2011-12-19 07:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dbjh 2011-12-18 23:21:44 UTC
Version:           4.7 (using KDE 4.7.3) 
OS:                Linux

My language is set to Dutch, so menu names or items may differ from when the language is set to English.
When going to Help -> Info about KMail, on the Info about tab the URL http://kontact.kde.org/kmail/ is listed. When clicking on that URL I end up at the URL http://userbase.kde.org/Kmail, telling me that the page has been removed. The URL should be http://userbase.kde.org/KMail (capital M in KMail).

Reproducible: Always

Steps to Reproduce:
See above.

Actual Results:  
KMail passes the URL http://kontact.kde.org/kmail/ to the default browser. That URL redirects to http://userbase.kde.org/Kmail.

Expected Results:  
Pass the URL http://userbase.kde.org/Kmail to the browser.

OS: Linux (x86_64) release 3.1.5-2.fc16.x86_64
Compiler: gcc
Comment 1 dbjh 2011-12-18 23:24:30 UTC
Now I made the same mistake... At Expected Results I intended to write:
Pass the URL http://userbase.kde.org/KMail to the browser.
Comment 2 Laurent Montel 2011-12-19 07:40:43 UTC
Git commit a9042bc0f64e753389fc53b4dcc96c232d37971f by Montel Laurent.
Committed on 19/12/2011 at 08:40.
Pushed by mlaurent into branch 'master'.

Fix Bug 289326 - URL in about tab points to a page that has been removed.

BUG: 289326

M  +1    -1    kmail/aboutdata.cpp

http://commits.kde.org/kdepim/a9042bc0f64e753389fc53b4dcc96c232d37971f
Comment 3 Laurent Montel 2011-12-19 07:43:14 UTC
Git commit a7f2c1894cc096938aeaaaacb46efaa0bd20cbba by Montel Laurent.
Committed on 19/12/2011 at 08:40.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 289326 - URL in about tab points to a page that has been removed.

BUG: 289326
(cherry picked from commit a9042bc0f64e753389fc53b4dcc96c232d37971f)

M  +1    -1    kmail/aboutdata.cpp

http://commits.kde.org/kdepim/a7f2c1894cc096938aeaaaacb46efaa0bd20cbba