Fix Bug 289326 - URL in about tab points to a page that has been removed.

BUG: 289326